Data Transformation Completed

--- a/notebook/eda_feature_eng.ipynb
+++ b/notebook/eda_feature_eng.ipynb
@@ -12,7 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
-    "warnings.filterwarnings(action='ignore')"
+    "warnings.filterwarnings(action='ignore')\n",
+    "\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit,train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score"
    ]
   },
   {
@@ -1258,88 +1264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "b4ebf1b3-3ec2-4d74-9626-266e4cb751fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import StratifiedShuffleSplit,train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "id": "a04d322a-6fa7-46c0-a396-07cf320734fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train,X_test,y_train,y_test = train_test_split(X,y,random_state=42,test_size=0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "59df3d62-8142-4520-b50f-bad0fa6a1d97",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9992743700478681\n",
-      "[[85294    13]\n",
-      " [   49    87]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "lr = LogisticRegression()\n",
-    "lr.fit(X_train,y_train)\n",
-    "y_pred = lr.predict(X_test)\n",
-    "print(accuracy_score(y_test,y_pred))\n",
-    "print(confusion_matrix(y_test,y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "f5ed7bd6-3993-40ef-b34c-69f5da379c76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rf = RandomForestClassifier()\n",
-    "# rf.fit(X_train,y_train)\n",
-    "# y_pred = rf.predict(X_test)\n",
-    "# print(accuracy_score(y_test,y_pred))\n",
-    "# print(confusion_matrix(y_test,y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "1ffdf29d-aa39-4de6-bcf0-9c9aa57507dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9995786664794073\n",
-      "[[85297    10]\n",
-      " [   26   110]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "xgb = XGBClassifier()\n",
-    "xgb.fit(X_train,y_train)\n",
-    "y_pred = xgb.predict(X_test)\n",
-    "print(accuracy_score(y_test,y_pred))\n",
-    "print(confusion_matrix(y_test,y_pred))"
    ]
   },
   {
@@ -1372,30 +1302,6 @@
     "for train_idx, test_idx in skf.split(X, y):\n",
     "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "    y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "86b30984-8246-4a2e-b6dd-2d320f518429",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9993153210091115\n",
-      "[[56848    15]\n",
-      " [   24    74]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "xgb = XGBClassifier()\n",
-    "xgb.fit(X_train,y_train)\n",
-    "y_pred = xgb.predict(X_test)\n",
-    "print(accuracy_score(y_test,y_pred))\n",
-    "print(confusion_matrix(y_test,y_pred))"
    ]
   },
   {
