--- a/notebook/eda_and_model_training.ipynb
+++ b/notebook/eda_and_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "aa7d71c9-5e72-47c9-83da-28265fa00c64",
    "metadata": {},
    "outputs": [],
@@ -18,8 +18,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score,precision_recall_curve, average_precision_score,\n",
-    "precision_score,recall_score,f1_score"
+    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score,precision_recall_curve, average_precision_score,precision_score,recall_score,f1_score"
    ]
   },
   {
@@ -69,17 +68,7 @@
        "      <th>V7</th>\n",
        "      <th>V8</th>\n",
        "      <th>V9</th>\n",
-       "      <th>V10</th>\n",
-       "      <th>V11</th>\n",
-       "      <th>V12</th>\n",
-       "      <th>V13</th>\n",
-       "      <th>V14</th>\n",
-       "      <th>V15</th>\n",
-       "      <th>V16</th>\n",
-       "      <th>V17</th>\n",
-       "      <th>V18</th>\n",
-       "      <th>V19</th>\n",
-       "      <th>V20</th>\n",
+       "      <th>...</th>\n",
        "      <th>V21</th>\n",
        "      <th>V22</th>\n",
        "      <th>V23</th>\n",
@@ -105,17 +94,7 @@
        "      <td>0.239599</td>\n",
        "      <td>0.098698</td>\n",
        "      <td>0.363787</td>\n",
-       "      <td>0.090794</td>\n",
-       "      <td>-0.551600</td>\n",
-       "      <td>-0.617801</td>\n",
-       "      <td>-0.991390</td>\n",
-       "      <td>-0.311169</td>\n",
-       "      <td>1.468177</td>\n",
-       "      <td>-0.470401</td>\n",
-       "      <td>0.207971</td>\n",
-       "      <td>0.025791</td>\n",
-       "      <td>0.403993</td>\n",
-       "      <td>0.251412</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.018307</td>\n",
        "      <td>0.277838</td>\n",
        "      <td>-0.110474</td>\n",
@@ -139,17 +118,7 @@
        "      <td>-0.078803</td>\n",
        "      <td>0.085102</td>\n",
        "      <td>-0.255425</td>\n",
-       "      <td>-0.166974</td>\n",
-       "      <td>1.612727</td>\n",
-       "      <td>1.065235</td>\n",
-       "      <td>0.489095</td>\n",
-       "      <td>-0.143772</td>\n",
-       "      <td>0.635558</td>\n",
-       "      <td>0.463917</td>\n",
-       "      <td>-0.114805</td>\n",
-       "      <td>-0.183361</td>\n",
-       "      <td>-0.145783</td>\n",
-       "      <td>-0.069083</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.225775</td>\n",
        "      <td>-0.638672</td>\n",
        "      <td>0.101288</td>\n",
@@ -173,17 +142,7 @@
        "      <td>0.791461</td>\n",
        "      <td>0.247676</td>\n",
        "      <td>-1.514654</td>\n",
-       "      <td>0.207643</td>\n",
-       "      <td>0.624501</td>\n",
-       "      <td>0.066084</td>\n",
-       "      <td>0.717293</td>\n",
-       "      <td>-0.165946</td>\n",
-       "      <td>2.345865</td>\n",
-       "      <td>-2.890083</td>\n",
-       "      <td>1.109969</td>\n",
-       "      <td>-0.121359</td>\n",
-       "      <td>-2.261857</td>\n",
-       "      <td>0.524980</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.247998</td>\n",
        "      <td>0.771679</td>\n",
        "      <td>0.909412</td>\n",
@@ -207,17 +166,7 @@
        "      <td>0.237609</td>\n",
        "      <td>0.377436</td>\n",
        "      <td>-1.387024</td>\n",
-       "      <td>-0.054952</td>\n",
-       "      <td>-0.226487</td>\n",
-       "      <td>0.178228</td>\n",
-       "      <td>0.507757</td>\n",
-       "      <td>-0.287924</td>\n",
-       "      <td>-0.631418</td>\n",
-       "      <td>-1.059647</td>\n",
-       "      <td>-0.684093</td>\n",
-       "      <td>1.965775</td>\n",
-       "      <td>-1.232622</td>\n",
-       "      <td>-0.208038</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.108300</td>\n",
        "      <td>0.005274</td>\n",
        "      <td>-0.190321</td>\n",
@@ -241,17 +190,7 @@
        "      <td>0.592941</td>\n",
        "      <td>-0.270533</td>\n",
        "      <td>0.817739</td>\n",
-       "      <td>0.753074</td>\n",
-       "      <td>-0.822843</td>\n",
-       "      <td>0.538196</td>\n",
-       "      <td>1.345852</td>\n",
-       "      <td>-1.119670</td>\n",
-       "      <td>0.175121</td>\n",
-       "      <td>-0.451449</td>\n",
-       "      <td>-0.237033</td>\n",
-       "      <td>-0.038195</td>\n",
-       "      <td>0.803487</td>\n",
-       "      <td>0.408542</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.009431</td>\n",
        "      <td>0.798278</td>\n",
        "      <td>-0.137458</td>\n",
@@ -265,15 +204,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Time        V1        V2        V3        V4        V5  ...       V25       V26       V27       V28  Amount  Class\n",
-       "0   0.0 -1.359807 -0.072781  2.536347  1.378155 -0.338321  ...  0.128539 -0.189115  0.133558 -0.021053  149.62      0\n",
-       "1   0.0  1.191857  0.266151  0.166480  0.448154  0.060018  ...  0.167170  0.125895 -0.008983  0.014724    2.69      0\n",
-       "2   1.0 -1.358354 -1.340163  1.773209  0.379780 -0.503198  ... -0.327642 -0.139097 -0.055353 -0.059752  378.66      0\n",
-       "3   1.0 -0.966272 -0.185226  1.792993 -0.863291 -0.010309  ...  0.647376 -0.221929  0.062723  0.061458  123.50      0\n",
-       "4   2.0 -1.158233  0.877737  1.548718  0.403034 -0.407193  ... -0.206010  0.502292  0.219422  0.215153   69.99      0\n",
+       "   Time        V1        V2        V3        V4        V5        V6        V7  \\\n",
+       "0   0.0 -1.359807 -0.072781  2.536347  1.378155 -0.338321  0.462388  0.239599   \n",
+       "1   0.0  1.191857  0.266151  0.166480  0.448154  0.060018 -0.082361 -0.078803   \n",
+       "2   1.0 -1.358354 -1.340163  1.773209  0.379780 -0.503198  1.800499  0.791461   \n",
+       "3   1.0 -0.966272 -0.185226  1.792993 -0.863291 -0.010309  1.247203  0.237609   \n",
+       "4   2.0 -1.158233  0.877737  1.548718  0.403034 -0.407193  0.095921  0.592941   \n",
+       "\n",
+       "         V8        V9  ...       V21       V22       V23       V24       V25  \\\n",
+       "0  0.098698  0.363787  ... -0.018307  0.277838 -0.110474  0.066928  0.128539   \n",
+       "1  0.085102 -0.255425  ... -0.225775 -0.638672  0.101288 -0.339846  0.167170   \n",
+       "2  0.247676 -1.514654  ...  0.247998  0.771679  0.909412 -0.689281 -0.327642   \n",
+       "3  0.377436 -1.387024  ... -0.108300  0.005274 -0.190321 -1.175575  0.647376   \n",
+       "4 -0.270533  0.817739  ... -0.009431  0.798278 -0.137458  0.141267 -0.206010   \n",
+       "\n",
+       "        V26       V27       V28  Amount  Class  \n",
+       "0 -0.189115  0.133558 -0.021053  149.62      0  \n",
+       "1  0.125895 -0.008983  0.014724    2.69      0  \n",
+       "2 -0.139097 -0.055353 -0.059752  378.66      0  \n",
+       "3 -0.221929  0.062723  0.061458  123.50      0  \n",
+       "4  0.502292  0.219422  0.215153   69.99      0  \n",
        "\n",
        "[5 rows x 31 columns]"
       ]
@@ -324,17 +278,7 @@
        "      <th>V7</th>\n",
        "      <th>V8</th>\n",
        "      <th>V9</th>\n",
-       "      <th>V10</th>\n",
-       "      <th>V11</th>\n",
-       "      <th>V12</th>\n",
-       "      <th>V13</th>\n",
-       "      <th>V14</th>\n",
-       "      <th>V15</th>\n",
-       "      <th>V16</th>\n",
-       "      <th>V17</th>\n",
-       "      <th>V18</th>\n",
-       "      <th>V19</th>\n",
-       "      <th>V20</th>\n",
+       "      <th>...</th>\n",
        "      <th>V21</th>\n",
        "      <th>V22</th>\n",
        "      <th>V23</th>\n",
@@ -360,17 +304,7 @@
        "      <td>-4.918215</td>\n",
        "      <td>7.305334</td>\n",
        "      <td>1.914428</td>\n",
-       "      <td>4.356170</td>\n",
-       "      <td>-1.593105</td>\n",
-       "      <td>2.711941</td>\n",
-       "      <td>-0.689256</td>\n",
-       "      <td>4.626942</td>\n",
-       "      <td>-0.924459</td>\n",
-       "      <td>1.107641</td>\n",
-       "      <td>1.991691</td>\n",
-       "      <td>0.510632</td>\n",
-       "      <td>-0.682920</td>\n",
-       "      <td>1.475829</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.213454</td>\n",
        "      <td>0.111864</td>\n",
        "      <td>1.014480</td>\n",
@@ -394,17 +328,7 @@
        "      <td>0.024330</td>\n",
        "      <td>0.294869</td>\n",
        "      <td>0.584800</td>\n",
-       "      <td>-0.975926</td>\n",
-       "      <td>-0.150189</td>\n",
-       "      <td>0.915802</td>\n",
-       "      <td>1.214756</td>\n",
-       "      <td>-0.675143</td>\n",
-       "      <td>1.164931</td>\n",
-       "      <td>-0.711757</td>\n",
-       "      <td>-0.025693</td>\n",
-       "      <td>-1.221179</td>\n",
-       "      <td>-1.545556</td>\n",
-       "      <td>0.059616</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.214205</td>\n",
        "      <td>0.924384</td>\n",
        "      <td>0.012463</td>\n",
@@ -428,17 +352,7 @@
        "      <td>-0.296827</td>\n",
        "      <td>0.708417</td>\n",
        "      <td>0.432454</td>\n",
-       "      <td>-0.484782</td>\n",
-       "      <td>0.411614</td>\n",
-       "      <td>0.063119</td>\n",
-       "      <td>-0.183699</td>\n",
-       "      <td>-0.510602</td>\n",
-       "      <td>1.329284</td>\n",
-       "      <td>0.140716</td>\n",
-       "      <td>0.313502</td>\n",
-       "      <td>0.395652</td>\n",
-       "      <td>-0.577252</td>\n",
-       "      <td>0.001396</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.232045</td>\n",
        "      <td>0.578229</td>\n",
        "      <td>-0.037501</td>\n",
@@ -462,17 +376,7 @@
        "      <td>-0.686180</td>\n",
        "      <td>0.679145</td>\n",
        "      <td>0.392087</td>\n",
-       "      <td>-0.399126</td>\n",
-       "      <td>-1.933849</td>\n",
-       "      <td>-0.962886</td>\n",
-       "      <td>-1.042082</td>\n",
-       "      <td>0.449624</td>\n",
-       "      <td>1.962563</td>\n",
-       "      <td>-0.608577</td>\n",
-       "      <td>0.509928</td>\n",
-       "      <td>1.113981</td>\n",
-       "      <td>2.897849</td>\n",
-       "      <td>0.127434</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.265245</td>\n",
        "      <td>0.800049</td>\n",
        "      <td>-0.163298</td>\n",
@@ -496,17 +400,7 @@
        "      <td>1.577006</td>\n",
        "      <td>-0.414650</td>\n",
        "      <td>0.486180</td>\n",
-       "      <td>-0.915427</td>\n",
-       "      <td>-1.040458</td>\n",
-       "      <td>-0.031513</td>\n",
-       "      <td>-0.188093</td>\n",
-       "      <td>-0.084316</td>\n",
-       "      <td>0.041333</td>\n",
-       "      <td>-0.302620</td>\n",
-       "      <td>-0.660377</td>\n",
-       "      <td>0.167430</td>\n",
-       "      <td>-0.256117</td>\n",
-       "      <td>0.382948</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.261057</td>\n",
        "      <td>0.643078</td>\n",
        "      <td>0.376777</td>\n",
@@ -520,15 +414,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Time         V1         V2        V3        V4  ...       V26       V27       V28  Amount  Class\n",
-       "284802  172786.0 -11.881118  10.071785 -9.834783 -2.066656  ...  0.250034  0.943651  0.823731    0.77      0\n",
-       "284803  172787.0  -0.732789  -0.055080  2.035030 -0.738589  ... -0.395255  0.068472 -0.053527   24.79      0\n",
-       "284804  172788.0   1.919565  -0.301254 -3.249640 -0.557828  ... -0.087371  0.004455 -0.026561   67.88      0\n",
-       "284805  172788.0  -0.240440   0.530483  0.702510  0.689799  ...  0.546668  0.108821  0.104533   10.00      0\n",
-       "284806  172792.0  -0.533413  -0.189733  0.703337 -0.506271  ... -0.818267 -0.002415  0.013649  217.00      0\n",
+       "            Time         V1         V2        V3        V4        V5  \\\n",
+       "284802  172786.0 -11.881118  10.071785 -9.834783 -2.066656 -5.364473   \n",
+       "284803  172787.0  -0.732789  -0.055080  2.035030 -0.738589  0.868229   \n",
+       "284804  172788.0   1.919565  -0.301254 -3.249640 -0.557828  2.630515   \n",
+       "284805  172788.0  -0.240440   0.530483  0.702510  0.689799 -0.377961   \n",
+       "284806  172792.0  -0.533413  -0.189733  0.703337 -0.506271 -0.012546   \n",
+       "\n",
+       "              V6        V7        V8        V9  ...       V21       V22  \\\n",
+       "284802 -2.606837 -4.918215  7.305334  1.914428  ...  0.213454  0.111864   \n",
+       "284803  1.058415  0.024330  0.294869  0.584800  ...  0.214205  0.924384   \n",
+       "284804  3.031260 -0.296827  0.708417  0.432454  ...  0.232045  0.578229   \n",
+       "284805  0.623708 -0.686180  0.679145  0.392087  ...  0.265245  0.800049   \n",
+       "284806 -0.649617  1.577006 -0.414650  0.486180  ...  0.261057  0.643078   \n",
+       "\n",
+       "             V23       V24       V25       V26       V27       V28  Amount  \\\n",
+       "284802  1.014480 -0.509348  1.436807  0.250034  0.943651  0.823731    0.77   \n",
+       "284803  0.012463 -1.016226 -0.606624 -0.395255  0.068472 -0.053527   24.79   \n",
+       "284804 -0.037501  0.640134  0.265745 -0.087371  0.004455 -0.026561   67.88   \n",
+       "284805 -0.163298  0.123205 -0.569159  0.546668  0.108821  0.104533   10.00   \n",
+       "284806  0.376777  0.008797 -0.473649 -0.818267 -0.002415  0.013649  217.00   \n",
+       "\n",
+       "        Class  \n",
+       "284802      0  \n",
+       "284803      0  \n",
+       "284804      0  \n",
+       "284805      0  \n",
+       "284806      0  \n",
        "\n",
        "[5 rows x 31 columns]"
       ]
@@ -1246,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "59d7a60d-b692-4681-9d15-c829bd490bab",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "44bdeed7-ef0a-4b38-aa2c-f9439217809f",
    "metadata": {},
    "outputs": [],
@@ -1266,22 +1182,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "b6c8bce5-ac77-4868-b34f-866a3af9cf92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['scaled_amount'] = scaler.fit_transform(df['Amount'].values.reshape(-1,1))"
+    "df['Amount'] = scaler.fit_transform(df['Amount'].values.reshape(-1,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "5b5ff4ef-47e8-401c-8bf4-855c60cf1608",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['scaled_time'] = scaler.fit_transform(df['Time'].values.reshape(-1,1))"
+    "df['Time'] = scaler.fit_transform(df['Time'].values.reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "344dd708-efe3-4be4-b418-4782cd97014a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Time', 'V1', 'V2', 'V3', 'V4', 'V5', 'V6', 'V7', 'V8', 'V9', 'V10',\n",
+       "       'V11', 'V12', 'V13', 'V14', 'V15', 'V16', 'V17', 'V18', 'V19', 'V20',\n",
+       "       'V21', 'V22', 'V23', 'V24', 'V25', 'V26', 'V27', 'V28', 'Amount',\n",
+       "       'Class'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -1291,7 +1232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['Time','Amount'],inplace=True)"
+    "# df.drop(columns=['Time','Amount'],inplace=True)"
    ]
   },
   {
