fix some bugs and make features.pkl

--- a/notebook/eda_and_model_training.ipynb
+++ b/notebook/eda_and_model_training.ipynb
@@ -4680,8 +4680,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "654f98bb-a945-4d59-8b6d-8c610d0959ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Time': {204079: 0.5922297019466864},\n",
+       " 'V1': {204079: 1.86210178942007},\n",
+       " 'V2': {204079: -0.124051888133202},\n",
+       " 'V3': {204079: -1.98975174951054},\n",
+       " 'V4': {204079: 0.382608915041756},\n",
+       " 'V5': {204079: 0.473031677376878},\n",
+       " 'V6': {204079: -0.674516988454297},\n",
+       " 'V7': {204079: 0.298621349163879},\n",
+       " 'V8': {204079: -0.282415726283542},\n",
+       " 'V9': {204079: 0.802052524645684},\n",
+       " 'V10': {204079: -0.989431189994817},\n",
+       " 'V11': {204079: -0.491112318271443},\n",
+       " 'V12': {204079: 0.903819349613327},\n",
+       " 'V13': {204079: 1.3665243152114},\n",
+       " 'V14': {204079: -1.88616230658692},\n",
+       " 'V15': {204079: -0.194861302074369},\n",
+       " 'V16': {204079: 0.0868367239072255},\n",
+       " 'V17': {204079: 0.978546240489057},\n",
+       " 'V18': {204079: 0.0556039737113707},\n",
+       " 'V19': {204079: 0.189130835579419},\n",
+       " 'V20': {204079: 0.150726987749903},\n",
+       " 'V21': {204079: -0.204158275791025},\n",
+       " 'V22': {204079: -0.51144105586203},\n",
+       " 'V23': {204079: 0.0778741500089749},\n",
+       " 'V24': {204079: 0.388335120253865},\n",
+       " 'V25': {204079: 0.0078957284691346},\n",
+       " 'V26': {204079: -0.120979613154893},\n",
+       " 'V27': {204079: -0.0195787926354923},\n",
+       " 'V28': {204079: 0.0061547052319409},\n",
+       " 'Amount': {204079: 1.2088311325368548},\n",
+       " 'Class': {204079: 1}}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Class']==1].sample().to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c4c26fbb-5c41-4410-b5f3-d9819fbc0535",
+   "id": "b2b9f091-8a63-417f-9b5f-864ac93b9f24",
    "metadata": {},
    "outputs": [],
    "source": []
